--- a/index.html
+++ b/index.html
@@ -5,75 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbershop</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@700&display=swap" rel="stylesheet">
-<link
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-<link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
   <body class="page">
 
-    <!-- Header -->
-    <header class="header">
-      <a class="logo" href=""><img src="./image/Logo.svg" alt="Logo" /></a>
-      <nav class="nav">
-        <ul class="list">
-          <li class="list-item"><a class="header-link" href="">About</a></li>
-          <li class="list-item"><a class="header-link" href="">Services and prices</a></li>
-          <li class="list-item"><a class="header-link" href="">Barbers</a></li>
-          <li class="list-item"><a class="header-link" href="#contacts">Contacts</a></li>
-        </ul>
-      </nav>
-      <div class="header-group">
-        <a class="header-link" href="tel:+380441111111">+38 044 111 11 11</a>
-        <button class="btn" type="button">ONLINE-BOOKING</button>
-      </div>
-    </header>
-
-    <!-- Hero -->
-    <section class="hero">
-       </div>
+    <!-- Hero and Header -->
+    <section class="section">
+      <header class="header">
+        <a class="logo" href=""><img src="./image/Logo.svg" alt="Logo" /></a>
+        <nav class="nav">
+          <ul class="list">
+            <li class="list-item"><a class="header-link" href="">About</a></li>
+            <li class="list-item"><a class="header-link" href="">Services and prices</a></li>
+            <li class="list-item"><a class="header-link" href="">Barbers</a></li>
+            <li class="list-item"><a class="header-link" href="#contacts">Contacts</a></li>
+          </ul>
+        </nav>
+        <div class="header-group">
+          <a class="header-link" href="tel:+380441111111">+38 044 111 11 11</a>
+          <button class="btn-light" type="button">ONLINE-BOOKING</button>
+        </div>
+      </header>
       <div class="group">
         <ul class="list">
           <li class="list-item">
-            <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer"
-              >Instagram</a
-            >
+            <a class="link" href="https://Instagram.com"
+             target="_blank" rel="noopener noreferrer"
+              >Instagram</a>
           </li>
           <li class="list-item">
-            <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer"
-              >Youtube</a
-            >
+            <a class="link" href="https://Youtube.com"
+             target="_blank" rel="noopener noreferrer"
+              >Youtube</a>
           </li>
         </ul>
       </div>
-      <div>
+      <div class="hero-content">
         <p class="uppertitle-dark">A hair salon for men in Kyiv</p>
-      <h1 class="hero-title">BarberShop</h1>
-      <p class="hero-subtitle">
-        We are experts in trendy men’s haircuts.<br> We work quickly, carefully and with style.
-      </p>
-     <div>
-      <ul class="list">
-        <li class="list-item">
-          <button class="btn-slider" type="button">Back</button>
-        </li>
-        <li class="list-item">
-          <button class="btn-slider" type="button">Forward</button>
-        </li>
-      </ul>
-     </div>
-      </section>
+        <h1 class="hero-title">BarberShop</h1>
+        <p class="hero-subtitle">
+          We are experts in trendy men’s haircuts.<br/>
+          We work quickly, carefully and with style.
+        </p>
+      </div>
+      <div>
+        <ul class="list">
+          <li class="list-item">
+            <button class="btn-slider" type="button">Back</button>
+          </li>
+          <li class="list-item">
+            <button class="btn-slider" type="button">Forward</button>
+          </li>
+        </ul>
+      </div>
+    </section>
 
     <!-- About -->
     <section class="section">
       <div class="group">
         <ul class="list">
-          <li class="list-item"><img src="./image/about1.jpg" alt="Front shave" /></li>
-          <li class="list-item"><img src="./image/about2.jpg" alt="Back shave" /></li>
+          <li class="list-item"><img src="./image/about/about1.jpg" alt="Front shave" /></li>
+          <li class="list-item"><img src="./image/about/about2.jpg" alt="Back shave" /></li>
         </ul>
       </div>
       <div class="group">
