Fonts and colors

--- a/index.html
+++ b/index.html
@@ -140,20 +140,24 @@
         <div class="group">
           <ul class="list">
             <p class="benefit">
-              <span class="benefits-number">600<sup><span class="sup">&#43</span></sup></span><br/><span
-                class="benefits-item">Satisfied customers per day</span>
+              <span class="benefits-number"
+                >600<sup><span class="sup">&#43;</span></sup></span
+              ><br /><span class="benefits-item">Satisfied customers per day</span>
             </p>
             <p class="benefit">
-              <span class="benefits-number">50<sup><span class="sup">&#43</span></sup></span><br/><span
-                class="benefits-item">Awards for excellent service</span>
+              <span class="benefits-number"
+                >50<sup><span class="sup">&#43;</span></sup></span
+              ><br /><span class="benefits-item">Awards for excellent service</span>
             </p>
             <p class="benefit">
-              <span class="benefits-number">20<sup><span class="sup">&#43</span></sup></span><br/><span
-                class="benefits-item">Kyiv’s best barbers</span>
+              <span class="benefits-number"
+                >20<sup><span class="sup">&#43;</span></sup></span
+              ><br /><span class="benefits-item">Kyiv’s best barbers</span>
             </p>
             <p class="benefit">
-              <span class="benefits-number">100<sup><span class="sup">&#43</span></sup></span><br/><span
-                class="benefits-item">Gifts for regular customers</span>
+              <span class="benefits-number"
+                >100<sup><span class="sup">&#43;</span></sup></span
+              ><br /><span class="benefits-item">Gifts for regular customers</span>
             </p>
           </ul>
         </div>
@@ -169,93 +173,101 @@
     </section>
 
     <!-- Our barbers -->
-    <section class="section">
+    <section class="section our-barbers">
       <div class="container">
-        <p class="uppertitle">for true enjoyers of the atmosphere</p>
-        <h2 class="section-title">Our barbers</h2>
-        <ul class="list">
-          <li>
-            <img src="./image/john.jpg" alt="John Smith" class="img" />
-            <h3>John Smith</h3>
-            <p>Extreme Barber</p>
-            <ul class="socials">
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/instagram.svg" alt="Instagram"
-                /></a>
-              </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/twitter.svg" alt="Twitter"
-                /></a>
-              </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/facebook.svg" alt="Facebook"
-                /></a>
-              </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/linkedin.svg" alt="LinkedIn"
-                /></a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <img src="./image/michele.jpg" alt="Michele Doe" class="img" />
-            <h3>John Smith</h3>
-            <p>Extreme Barber</p>
-            <ul class="socials">
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/instagram.svg" alt="Instagram"
-                /></a>
-              </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/twitter.svg" alt="Twitter"
-                /></a>
-              </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/facebook.svg" alt="Facebook"
-                /></a>
-              </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/linkedin.svg" alt="LinkedIn"
-                /></a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <img src="./image/alan.jpg" alt="Alan Black" class="img" />
-            <h3>John Smith</h3>
-            <p>Extreme Barber</p>
-            <ul class="socials">
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/instagram.svg" alt="Instagram"
-                /></a>
-              </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/twitter.svg" alt="Twitter"
-                /></a>
-              </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/facebook.svg" alt="Facebook"
-                /></a>
-              </li>
-              <li class="socials-item">
-                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                  ><img src="./image/Social/linkedin.svg" alt="LinkedIn"
-                /></a>
-              </li>
-            </ul>
-          </li>
-        </ul>
+        <div class="barbers">
+          <p class="uppertitle">for true enjoyers of the atmosphere</p>
+          <h2 class="title-dark">Our barbers</h2>
+        </div>
+        <div class="group">
+          <ul class="list">
+            <li>
+              <img src="./image/barbers/john.jpg" alt="John Smith" class="img" />
+              <h3 class="barber-name">John Smith</h3>
+              <p class="prof">Extreme Barber</p>
+              <div class="social">
+                <ul class="socials">
+                  <li class="socials-item">
+                     <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                      ><img src="./image/social/instagram.svg" alt="Instagram"
+                    /></a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                      ><img src="./image/social/twitter.svg" alt="Twitter"
+                    /></a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                      ><img src="./image/social/facebook.svg" alt="Facebook"
+                    /></a>
+                  </li>
+                  <li class="socials-item">
+                    <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                      ><img src="./image/social/linkedin.svg" alt="LinkedIn"
+                    /></a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+
+            <li>
+              <img src="./image/barbers/michele.jpg" alt="Michele Doe" class="img" />
+              <h3 class="barber-name">Michele Doe</h3>
+              <p class="">Extreme Barber</p>
+              <ul class="socials">
+                <li class="socials-item">
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    ><img src="./image/Social/instagram.svg" alt="Instagram"
+                  /></a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    ><img src="./image/Social/twitter.svg" alt="Twitter"
+                  /></a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    ><img src="./image/Social/facebook.svg" alt="Facebook"
+                  /></a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    ><img src="./image/Social/linkedin.svg" alt="LinkedIn"
+                  /></a>
+                </li>
+              </ul>
+            </li>
+
+            <li>
+              <img src="./image/barbers/alan.jpg" alt="Alan Black" class="img" />
+              <h3 class="barber-name">Alan Black</h3>
+              <p>Extreme Barber</p>
+              <ul class="socials">
+                <li class="socials-item">
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    ><img src="./image/Social/instagram.svg" alt="Instagram"
+                  /></a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    ><img src="./image/Social/twitter.svg" alt="Twitter"
+                  /></a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    ><img src="./image/Social/facebook.svg" alt="Facebook"
+                  /></a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    ><img src="./image/Social/linkedin.svg" alt="LinkedIn"
+                  /></a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
@@ -263,58 +275,59 @@
     <section class="section">
       <div class="container">
         <p class="uppertitle">in Latin, "barba" means "beard"</p>
-        <h2 class="section-title" hidden>Gallery</h2>
-        <ul class="list">
-          <li class="list-item"><img src="./image/gallery1.jpg" alt="haircut" class="img" /></li>
-          <li class="list-item"><img src="./image/gallery2.jpg" alt="shaving" class="img" /></li>
-          <li class="list-item"><img src="./image/gallery3.jpg" alt="compress" class="img" /></li>
-          <li class="list-item"><img src="./image/gallery4.jpg" alt="edging" class="img" /></li>
+        <h2 class="gallery-title">Gallery</h2>
+        <ul class="list gallery>
+          <li class="list-item"><img src="./image/gallery/gallery1.jpg" alt="haircut" class="img" /></li>
+          <li class="list-item"><img src="./image/gallery/gallery2.jpg" alt="shaving" class="img" /></li>
+          <li class="list-item"><img src="./image/gallery/gallery3.jpg" alt="compress" class="img" /></li>
+          <li class="list-item"><img src="./image/gallery/gallery4.jpg" alt="edging" class="img" /></li>
         </ul>
       </div>
     </section>
 
     <!-- form -->
     <section class="form-section">
-      <h2 class="section-title">Online-booking</h2>
-
-      <button class="btn" type="button">send</button>
+      
+      
     </section>
 
     <!-- contacts -->
     <section class="section" id="contacts">
-      <h2 class="section-title">Contacts</h2>
-      <address class="contacts-adress">
-        <ul class="list">
-          <li class="list-item">
-            <a
-              class="map"
-              href="https://goo.gl/maps/r24npt5XV5TZUg2dA"
-              target="_blank"
-              rel="noopener noreferrer"
-              >st. Vasilkovaya, <br />
-              7A Kiev, 08132</a
-            >
-          </li>
-          <li class="list-item">
-            <a class="footer-contact" href="barbershop@email.com">barbershop@email.com</a>
-          </li>
-          <li class="list-item">
-            <a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
-      <p class="subtitle">working hours</p>
-      <p class="subtitle">Every day from <time>9:00</time> to <time>22:00</time></p>
+      <div class="container">
+        <div class="form">
+          <h2 class="title-light">Online-booking</h2>
+
+          <button class="btn-light" type="button">send</button>
+        </div>
+        <div class="contacts">
+          <h2 class="title-light">Contacts</h2>
+          <address class="contacts-adress">
+            <ul class="list">
+              <li class="list-item">
+                <a class="contact" href="https://goo.gl/maps/r24npt5XV5TZUg2dA" target="_blank" rel="noopener noreferrer">st. Vasilkovaya,<br/>7A Kiev, 08132</a>
+              </li>
+              <li class="list-item">
+                <a class="contact" href="barbershop@email.com">barbershop@email.com</a>
+              </li>
+              <li class="list-item">
+                <a class="contact" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+          <p class="hours-title">working hours</p>
+          <p class="contact">Every day from <time>9:00</time> to <time>22:00</time></p>
+        </div>
+      </div>      
     </section>
 
     <footer>
-      <p>&#xa9; Copyright 2020</p>
+      <p class="copyright">&#xa9; Copyright 2020</p>
       <ul class="list">
         <li class="list-item">
-          <a href="https://Instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a>
+          <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a>
         </li>
         <li class="list-item">
-          <a href="https://Youtube.com" target="_blank" rel="noopener noreferrer">Youtube</a>
+          <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer">Youtube</a>
         </li>
       </ul>
     </footer>
