--- a/index.html
+++ b/index.html
@@ -74,14 +74,19 @@
     <!-- About -->
     <section class="section">
       <div class="container">
-        <div class="group">
+        <div class="about-photo">
           <ul class="list">
             <li class="list-item"><img src="./image/about/about1.jpg" alt="Front shave" /></li>
             <li class="list-item"><img src="./image/about/about2.jpg" alt="Back shave" /></li>
           </ul>
         </div>
-        <div class="group">
-          <p class="uppertitle">ABOUT</p>
+        <div class="info-block">
+          <div class="up-block">
+            <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
+              <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
+            </svg>
+            <p class="uppertitle">ABOUT</p>
+          </div>
           <h2 class="title-dark">Best Barbershop in your city</h2>
           <p class="subtitle">
             If you want to add more confidence to your image, you should definitely visit us.
@@ -100,6 +105,16 @@
     <!-- Services and prices -->
     <section class="section services-prices">
       <div class="container">
+        <div class="up-block">
+          <svg
+            class="line"
+            width="60"
+            height="0"
+            style="outline: 1px solid rgba(157, 164, 189, 0.6)"
+          >
+            <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
+          </svg>
+        </div>
         <p class="uppertitle-dark">spend your time with the best masters</p>
         <h2 class="title-light">Services and prices</h2>
         <div class="group">
@@ -162,7 +177,12 @@
           </ul>
         </div>
         <div class="group">
-          <p class="uppertitle">old traditional school</p>
+          <div class="up-block">
+            <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
+              <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
+            </svg>
+            <p class="uppertitle">old traditional school</p>
+          </div>
           <h2 class="title-dark">Why people come to us?</h2>
           <p class="subtitle">
             Only good things are said about us. But it's better to see and feel 1 time than read 10
@@ -176,7 +196,12 @@
     <section class="section our-barbers">
       <div class="container">
         <div class="barbers">
-          <p class="uppertitle">for true enjoyers of the atmosphere</p>
+          <div class="up-block">
+            <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
+              <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
+            </svg>
+            <p class="uppertitle">for true enjoyers of the atmosphere</p>
+          </div>
           <h2 class="title-dark">Our barbers</h2>
         </div>
         <div class="group">
@@ -188,7 +213,7 @@
               <div class="social">
                 <ul class="socials">
                   <li class="socials-item">
-                     <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
                       ><img src="./image/social/instagram.svg" alt="Instagram"
                     /></a>
                   </li>
@@ -274,21 +299,28 @@
     <!-- Gallery -->
     <section class="section">
       <div class="container">
-        <p class="uppertitle">in Latin, "barba" means "beard"</p>
+        <div class="up-block">
+          <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
+            <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
+          </svg>
+          <p class="uppertitle">in Latin, "barba" means "beard"</p>
+        </div>
         <h2 class="gallery-title">Gallery</h2>
-        <ul class="list gallery>
-          <li class="list-item"><img src="./image/gallery/gallery1.jpg" alt="haircut" class="img" /></li>
-          <li class="list-item"><img src="./image/gallery/gallery2.jpg" alt="shaving" class="img" /></li>
-          <li class="list-item"><img src="./image/gallery/gallery3.jpg" alt="compress" class="img" /></li>
-          <li class="list-item"><img src="./image/gallery/gallery4.jpg" alt="edging" class="img" /></li>
+        <ul class="list gallery">
+          <li class="list-item">
+            <img src="./image/gallery/gallery1.jpg" alt="haircut" class="img" />
+          </li>
+          <li class="list-item">
+            <img src="./image/gallery/gallery2.jpg" alt="shaving" class="img" />
+          </li>
+          <li class="list-item">
+            <img src="./image/gallery/gallery3.jpg" alt="compress" class="img" />
+          </li>
+          <li class="list-item">
+            <img src="./image/gallery/gallery4.jpg" alt="edging" class="img" />
+          </li>
         </ul>
       </div>
-    </section>
-
-    <!-- form -->
-    <section class="form-section">
-      
-      
     </section>
 
     <!-- contacts -->
@@ -304,7 +336,13 @@
           <address class="contacts-adress">
             <ul class="list">
               <li class="list-item">
-                <a class="contact" href="https://goo.gl/maps/r24npt5XV5TZUg2dA" target="_blank" rel="noopener noreferrer">st. Vasilkovaya,<br/>7A Kiev, 08132</a>
+                <a
+                  class="contact"
+                  href="https://goo.gl/maps/r24npt5XV5TZUg2dA"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >st. Vasilkovaya,<br />7A Kiev, 08132</a
+                >
               </li>
               <li class="list-item">
                 <a class="contact" href="barbershop@email.com">barbershop@email.com</a>
@@ -314,22 +352,38 @@
               </li>
             </ul>
           </address>
+          <div class="up-block">
+          <svg class="line" width="60" height="0" style="outline: 1px solid #9DA4BD">
+            <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
+          </svg>
           <p class="hours-title">working hours</p>
+          </div>
           <p class="contact">Every day from <time>9:00</time> to <time>22:00</time></p>
         </div>
-      </div>      
+      </div>
     </section>
 
-    <footer>
-      <p class="copyright">&#xa9; Copyright 2020</p>
-      <ul class="list">
+    <footer class="footer">
+      <div class="container">
+        <p class="copyright">&#xa9; Copyright 2020</p>
+      <div class="up-block-footer">
+        <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
+          <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
+        </svg>      
+      <ul class="list">        
         <li class="list-item">
-          <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a>
+          <a class="link" href="https://Instagram.com" target="_blank" rel="noopener noreferrer"
+            >Instagram</a
+          >
         </li>
         <li class="list-item">
-          <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer">Youtube</a>
+          <a class="link" href="https://Youtube.com" target="_blank" rel="noopener noreferrer"
+            >Youtube</a
+          >
         </li>
       </ul>
+      </div>
+      </div>      
     </footer>
   </body>
 </html>
