--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section class="section">
       <div class="container">
         <div class="about-photo">
-          <ul class="list-about">
+          <ul class="list about">
             <li class="list-item"><img src="./image/about/about1.jpg" alt="Front shave" /></li>
             <li class="list-item"><img src="./image/about/about2.jpg" alt="Back shave" /></li>
           </ul>
@@ -195,104 +195,110 @@
     <!-- Our barbers -->
     <section class="section our-barbers">
       <div class="container">
-        <div class="barbers">
-          <div class="up-block">
-            <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
-              <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
-            </svg>
-            <p class="uppertitle">for true enjoyers of the atmosphere</p>
-          </div>
-          <h2 class="title-dark">Our barbers</h2>
+        <div class="up-block">
+          <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
+            <line x1="0" y1="0" x2="60" y2="0" stroke="#303030" stroke-width="1" />
+          </svg>
+          <p class="uppertitle">for true enjoyers of the atmosphere</p>
         </div>
-        <div class="group">
-          <ul class="list">
-            <li>
-              <img src="./image/barbers/john.jpg" alt="John Smith" class="img" />
+        <h2 class="title-dark">Our barbers</h2>
+
+        <ul class="list">
+          <li class="barber-card">
+            <img src="./image/barbers/john.jpg" alt="John Smith" class="img" />
+            <div class="card-title">
               <h3 class="barber-name">John Smith</h3>
               <p class="prof">Extreme Barber</p>
-              <div class="social">
-                <ul class="socials">
-                  <li class="socials-item">
-                    <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                      ><img src="./image/social/instagram.svg" alt="Instagram"
-                    /></a>
-                  </li>
-                  <li class="socials-item">
-                    <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                      ><img src="./image/social/twitter.svg" alt="Twitter"
-                    /></a>
-                  </li>
-                  <li class="socials-item">
-                    <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                      ><img src="./image/social/facebook.svg" alt="Facebook"
-                    /></a>
-                  </li>
-                  <li class="socials-item">
-                    <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                      ><img src="./image/social/linkedin.svg" alt="LinkedIn"
-                    /></a>
-                  </li>
-                </ul>
-              </div>
-            </li>
+            </div>
 
-            <li>
-              <img src="./image/barbers/michele.jpg" alt="Michele Doe" class="img" />
+            <div class="social">
+              <ul class="socials">
+                <li class="socials-item">
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    ><img src="./image/social/instagram.svg" alt="Instagram"
+                  /></a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    ><img src="./image/social/twitter.svg" alt="Twitter"
+                  /></a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    ><img src="./image/social/facebook.svg" alt="Facebook"
+                  /></a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                    ><img src="./image/social/linkedin.svg" alt="LinkedIn"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li class="barber-card">
+            <img src="./image/barbers/michele.jpg" alt="Michele Doe" class="img" />
+            <div class="card-title">
               <h3 class="barber-name">Michele Doe</h3>
-              <p class="">Extreme Barber</p>
-              <ul class="socials">
-                <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                    ><img src="./image/Social/instagram.svg" alt="Instagram"
-                  /></a>
-                </li>
-                <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                    ><img src="./image/Social/twitter.svg" alt="Twitter"
-                  /></a>
-                </li>
-                <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                    ><img src="./image/Social/facebook.svg" alt="Facebook"
-                  /></a>
-                </li>
-                <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                    ><img src="./image/Social/linkedin.svg" alt="LinkedIn"
-                  /></a>
-                </li>
-              </ul>
-            </li>
+              <p class="prof">Extreme Barber</p>
+            </div>
 
-            <li>
-              <img src="./image/barbers/alan.jpg" alt="Alan Black" class="img" />
+            <ul class="socials">
+              <li class="socials-item">
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                  ><img src="./image/Social/instagram.svg" alt="Instagram"
+                /></a>
+              </li>
+              <li class="socials-item">
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                  ><img src="./image/Social/twitter.svg" alt="Twitter"
+                /></a>
+              </li>
+              <li class="socials-item">
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                  ><img src="./image/Social/facebook.svg" alt="Facebook"
+                /></a>
+              </li>
+              <li class="socials-item">
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                  ><img src="./image/Social/linkedin.svg" alt="LinkedIn"
+                /></a>
+              </li>
+            </ul>
+          </li>
+
+          <li class="barber-card">
+            <img src="./image/barbers/alan.jpg" alt="Alan Black" class="img" />
+            <div class="card-title">
               <h3 class="barber-name">Alan Black</h3>
-              <p>Extreme Barber</p>
-              <ul class="socials">
-                <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                    ><img src="./image/Social/instagram.svg" alt="Instagram"
-                  /></a>
-                </li>
-                <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                    ><img src="./image/Social/twitter.svg" alt="Twitter"
-                  /></a>
-                </li>
-                <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                    ><img src="./image/Social/facebook.svg" alt="Facebook"
-                  /></a>
-                </li>
-                <li class="socials-item">
-                  <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
-                    ><img src="./image/Social/linkedin.svg" alt="LinkedIn"
-                  /></a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
+              <p class="prof">Extreme Barber</p>
+            </div>
+
+            <ul class="socials">
+              <li class="socials-item">
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                  ><img src="./image/Social/instagram.svg" alt="Instagram"
+                /></a>
+              </li>
+              <li class="socials-item">
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                  ><img src="./image/Social/twitter.svg" alt="Twitter"
+                /></a>
+              </li>
+              <li class="socials-item">
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                  ><img src="./image/Social/facebook.svg" alt="Facebook"
+                /></a>
+              </li>
+              <li class="socials-item">
+                <a class="socials-link" href="" target="_blank" rel="noopener noreferrer"
+                  ><img src="./image/Social/linkedin.svg" alt="LinkedIn"
+                /></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </section>
 
@@ -325,7 +331,7 @@
 
     <!-- contacts -->
     <div class="double-section">
-      <div class="container">
+      <div class="container double">
         <section class="section form-cont" id="contacts">
           <div class="form">
             <h2 class="title-light">Online-booking</h2>
@@ -367,8 +373,8 @@
       </div>
     </div>
 
-    <footer class="footer">
-      <div class="container">
+    <footer>
+      <div class="container footer">
         <p class="copyright">&#xa9; Copyright 2020</p>
         <div class="up-block-footer">
           <svg class="line" width="60" height="0" style="outline: 1px solid #303030">
